error.txt
    Checking app-ui v0.1.0 (C:\Users\liu_f\.gemini\antigravity\scratch\sticky_notes\app)
error[E0425]: cannot find function `mount_to_body` in this scope
 --> src\main.rs:8:5
  |
8 |     mount_to_body(|| {
  |     ^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing one of these functions
  |
3 + use crate::mount::mount_to_body;
  |
3 + use leptos::mount::mount_to_body;
  |

warning: use of deprecated function `leptos::prelude::create_signal`: This function is being renamed to `signal()` to conform to Rust idioms.
  --> src\app.rs:63:32
   |
63 |     let (pinned, set_pinned) = create_signal(false);
   |                                ^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `leptos::prelude::create_signal`: This function is being renamed to `signal()` to conform to Rust idioms.
  --> src\app.rs:64:34
   |
64 |     let (content, set_content) = create_signal(String::new());
   |                                  ^^^^^^^^^^^^^

warning: use of deprecated function `leptos::prelude::create_signal`: This function is being renamed to `signal()` to conform to Rust idioms.
  --> src\app.rs:65:34
   |
65 |     let (editing, set_editing) = create_signal(true);
   |                                  ^^^^^^^^^^^^^

warning: use of deprecated function `leptos::prelude::create_signal`: This function is being renamed to `signal()` to conform to Rust idioms.
  --> src\app.rs:66:30
   |
66 |     let (todos, set_todos) = create_signal(Vec::<TodoItem>::new());
   |                              ^^^^^^^^^^^^^

warning: use of deprecated function `leptos::prelude::create_signal`: This function is being renamed to `signal()` to conform to Rust idioms.
  --> src\app.rs:67:28
   |
67 |     let (mode, set_mode) = create_signal("note");
   |                            ^^^^^^^^^^^^^

warning: use of deprecated function `leptos::prelude::create_signal`: This function is being renamed to `signal()` to conform to Rust idioms.
  --> src\app.rs:70:42
   |
70 |     let (dragging_id, set_dragging_id) = create_signal(None::<u32>);
   |                                          ^^^^^^^^^^^^^

warning: use of deprecated function `leptos::prelude::create_signal`: This function is being renamed to `signal()` to conform to Rust idioms.
  --> src\app.rs:71:48
   |
71 |     let (drop_target_id, set_drop_target_id) = create_signal(None::<u32>);
   |                                                ^^^^^^^^^^^^^

warning: use of deprecated function `leptos::prelude::create_signal`: This function is being renamed to `signal()` to conform to Rust idioms.
  --> src\app.rs:72:46
   |
72 |     let (drop_position, set_drop_position) = create_signal(0.5); // 0.0-1.0 for position detection
   |                                              ^^^^^^^^^^^^^

error[E0277]: `F1` cannot be sent between threads safely
   --> src\app.rs:412:17
    |
412 |                 children=move |todo| {
    |                 ^^^^^^^^ ----------- within this `{closure@src\app.rs:412:26: 412:37}`
    |                 |
    |                 `F1` cannot be sent between threads safely
    |
note: required because it's used within this closure
   --> src\app.rs:412:26
    |
412 |                 children=move |todo| {
    |                          ^^^^^^^^^^^
note: required by a bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, __key, ())>::children`
   --> C:\Users\liu_f\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\leptos-0.7.8\src\for_loop.rs:121:22
    |
116 |     children: EF,
    |     -------- required by a bound in this associated function
...
121 |     EF: Fn(T) -> N + Send + Clone + 'static,
    |                      ^^^^ required by this bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, __key, ())>::children`
help: consider further restricting type parameter `F1` with trait `Send`
    |
392 |     F1: Fn(u32) + Clone + 'static + std::marker::Send,
    |                                   +++++++++++++++++++

error[E0277]: `F2` cannot be sent between threads safely
   --> src\app.rs:412:17
    |
412 |                 children=move |todo| {
    |                 ^^^^^^^^ ----------- within this `{closure@src\app.rs:412:26: 412:37}`
    |                 |
    |                 `F2` cannot be sent between threads safely
    |
note: required because it's used within this closure
   --> src\app.rs:412:26
    |
412 |                 children=move |todo| {
    |                          ^^^^^^^^^^^
note: required by a bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, __key, ())>::children`
   --> C:\Users\liu_f\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\leptos-0.7.8\src\for_loop.rs:121:22
    |
116 |     children: EF,
    |     -------- required by a bound in this associated function
...
121 |     EF: Fn(T) -> N + Send + Clone + 'static,
    |                      ^^^^ required by this bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, __key, ())>::children`
help: consider further restricting type parameter `F2` with trait `Send`
    |
393 |     F2: Fn(u32) + Clone + 'static + std::marker::Send,
    |                                   +++++++++++++++++++

error[E0277]: `F4` cannot be sent between threads safely
   --> src\app.rs:412:17
    |
412 |                 children=move |todo| {
    |                 ^^^^^^^^ ----------- within this `{closure@src\app.rs:412:26: 412:37}`
    |                 |
    |                 `F4` cannot be sent between threads safely
    |
note: required because it's used within this closure
   --> src\app.rs:412:26
    |
412 |                 children=move |todo| {
    |                          ^^^^^^^^^^^
note: required by a bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, __key, ())>::children`
   --> C:\Users\liu_f\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\leptos-0.7.8\src\for_loop.rs:121:22
    |
116 |     children: EF,
    |     -------- required by a bound in this associated function
...
121 |     EF: Fn(T) -> N + Send + Clone + 'static,
    |                      ^^^^ required by this bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, __key, ())>::children`
help: consider further restricting type parameter `F4` with trait `Send`
    |
395 |     F4: Fn(String) + Clone + 'static + std::marker::Send,
    |                                      +++++++++++++++++++

error[E0277]: `F3` cannot be sent between threads safely
   --> src\app.rs:412:17
    |
412 |                 children=move |todo| {
    |                 ^^^^^^^^ ----------- within this `{closure@src\app.rs:412:26: 412:37}`
    |                 |
    |                 `F3` cannot be sent between threads safely
    |
note: required because it's used within this closure
   --> src\app.rs:412:26
    |
412 |                 children=move |todo| {
    |                          ^^^^^^^^^^^
note: required by a bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, __key, ())>::children`
   --> C:\Users\liu_f\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\leptos-0.7.8\src\for_loop.rs:121:22
    |
116 |     children: EF,
    |     -------- required by a bound in this associated function
...
121 |     EF: Fn(T) -> N + Send + Clone + 'static,
    |                      ^^^^ required by this bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, __key, ())>::children`
help: consider further restricting type parameter `F3` with trait `Send`
    |
394 |     F3: Fn(u32, Option<u32>, i32) + Clone + 'static + std::marker::Send,
    |                                                     +++++++++++++++++++

error[E0382]: use of moved value: `log`
   --> src\app.rs:552:21
    |
441 |     log: F4,
    |     --- move occurs because `log` has type `F4`, which does not implement the `Copy` trait
...
461 |     let on_mousedown = move |ev: web_sys::MouseEvent| {
    |                        ------------------------------ value moved into closure here
...
464 |             log(format!("Start dragging: {}", id));
    |             --- variable moved due to use in closure
...
552 |                 log=log 
    |                     ^^^ value used here after move
    |
help: consider cloning the value before moving it into the closure
    |
461 ~     let value = log.clone();
462 ~     let on_mousedown = move |ev: web_sys::MouseEvent| {
463 |         if ev.button() == 0 { // Left click only
464 |             set_dragging_id.set(Some(id));
465 ~             value(format!("Start dragging: {}", id));
    |

warning: unused variable: `parent_id`
   --> src\app.rs:457:9
    |
457 |     let parent_id = todo.parent_id;
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_parent_id`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `position`
   --> src\app.rs:458:9
    |
458 |     let position = todo.position;
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_position`

Some errors have detailed explanations: E0277, E0382, E0425.
For more information about an error, try `rustc --explain E0277`.
warning: `app-ui` (bin "app-ui") generated 10 warnings
error: could not compile `app-ui` (bin "app-ui") due to 6 previous errors; 10 warnings emitted
